# psitri-multiindex

./: .gitignore  CMakeLists.txt  README.md  TODO.md
docs/: api.md  dependency-pattern.md  design.md
include/psitri_multiindex/: key_codec.hpp  table.hpp
include/psitri_multiindex/detail/: schema_hash.hpp
tests/: CMakeLists.txt  antelope_shapes_tests.cpp  key_codec_tests.cpp  smoke_test.cpp  table_basic_tests.cpp  table_header_tests.cpp  table_iteration_tests.cpp  table_schema_tests.cpp  table_secondary_tests.cpp  table_subtx_tests.cpp
